# BA_draft

./: CMakeLists.txt  CMakeSettings.json  README.md  README.txt
Common/: CameraManager.cpp  CameraManager.hpp  Scene.hpp  UI.cpp  UI.hpp
MRAndDepthExport/: CMakeLists.txt
MRAndDepthExport/src/: AppLogic.cpp  AppLogic.hpp  AppState.hpp  AppView.cpp  AppView.hpp  DataStreamer.cpp  DataStreamer.hpp  DataStreamer_old.cpp  DataStreamer_old.hpp  Depth16SequenceWriter.hpp  IPCConnectorClient.cpp  IPCConnectorClient.hpp  IPCConnectorClientInstrument.cpp  IPCConnectorClientInstrument.hpp  IPCConnectorHost.cpp  IPCConnectorHost.hpp  MRScene.cpp  MRScene.hpp  PointCloud.cpp  PointCloud.hpp  Visualization.hpp  main.cpp
include/: Varjo.h  Varjo_d3d11.h  Varjo_d3d12.h  Varjo_datastream.h  Varjo_events.h  Varjo_export.h  Varjo_gl.h  Varjo_layers.h  Varjo_mr.h  Varjo_types.h  Varjo_types_datastream.h  Varjo_types_layers.h  Varjo_types_mr.h  Varjo_types_world.h  Varjo_version_defines.h  Varjo_world.h
include_experimental/: Varjo_experimental.h  Varjo_mr_experimental.h  Varjo_types_experimental.h  Varjo_types_layers_experimental.h  Varjo_types_mr_experimental.h
lib/: VarjoLib.lib  VarjoLib32.lib
